--- a/lib_framework/build.gradle
+++ b/lib_framework/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     api 'org.greenrobot:eventbus:3.1.1'
     // EventBus 结束
 
+    //recyclerview 开始
+    api 'com.android.support:recyclerview-v7:26.1.0'
+    //recyclerview 结束
 
 
 }
