--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.framework.util.util_framework">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,15 +16,31 @@
         <activity android:name=".network.volley.VolleyActivity" />
         <!-- Volley使用  结束 -->
 
-        <activity android:name=".customview.CustomizeActivity"></activity>
-        <activity android:name=".tablayout.TablayoutActivity">
-
-        </activity>
+        <activity android:name=".customview.CustomizeActivity" />
+        <activity android:name=".tablayout.TablayoutActivity"></activity>
         <activity android:name=".recyclerview.RecyclerViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".test.Test1Activity">
+            <!--要想在别的App上能成功调起App，必须添加intent过滤器-->
+            <intent-filter>
+                <!--协议部分，随便设置
+                    xl://goods:8888/goodsDetail?goodsId=10011002
+                 -->
+                <data android:scheme="xl"
+                    android:host="goods"
+                    android:path="/goodsDetail"
+                    android:port="8888"/>
+
+                <!--下面这几行也必须得设置-->
+                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
             </intent-filter>
         </activity>
     </application>
